--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,4 @@
-.gpt3__navbar {
+.portfolio__navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -6,24 +6,24 @@
     padding: 2rem 6rem;
 }
 
-.gpt3__navbar-links {
+.portfolio__navbar-links {
     flex: 1;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
-.gpt3__navbar-links_logo {
+.portfolio__navbar-links_logo {
     margin-right: 2rem;
 }
 
-.gpt3__navbar-links_logo img {
+.portfolio__navbar-links_logo img {
     width: 70px;
     height: 30px;
 }
 
-.gpt3__navbar-menu-link:hover, 
-.gpt3__navbar-links_logo:hover {
+.portfolio__navbar-menu-link:hover, 
+.portfolio__navbar-links_logo:hover {
     animation: shake 0.4s;
     transition: 0.4s ease;
     cursor: pointer;
@@ -40,14 +40,14 @@
     90%, 100% { transform:  scale(1.2) rotate(0deg); }
   }
 
-.gpt3__navbar-links_container {
+.portfolio__navbar-links_container {
     display: flex;
     flex-direction: row;
 }
 
 
-.gpt3__navbar-links_container p,
-.gpt3__navbar-menu_container p {
+.portfolio__navbar-links_container p,
+.portfolio__navbar-menu_container p {
     color: #fff;
     font-family: var(--font-family);
     font-weight: 500;
@@ -59,7 +59,7 @@
     cursor: pointer;
 }
 
-.gpt3__navbar-menu_container button {
+.portfolio__navbar-menu_container button {
     padding: 0.5rem 1rem;
     color: #fff;
     background: #FF4820;
@@ -73,18 +73,18 @@
     border-radius: 5px;
 }
 
-.gpt3__navbar-menu {
+.portfolio__navbar-menu {
     margin-left: 1rem;
 
     display: none;
     position: relative;
 }
 
-.gpt3__navbar-menu svg {
+.portfolio__navbar-menu svg {
     cursor: pointer;
 }
 
-.gpt3__navbar-menu_container {
+.portfolio__navbar-menu_container {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -102,37 +102,37 @@
     box-shadow: 0px 0px 5px rgba(0,0, 0,0.2);
 }
 
-.gpt3__navbar-menu_container p {
+.portfolio__navbar-menu_container p {
     margin: 1rem 0;
 }
 
 
 @media screen and (max-width: 1050px) {
-    .gpt3__navbar-links_container {
+    .portfolio__navbar-links_container {
         display: none;
     }
 
-    .gpt3__navbar-menu {
+    .portfolio__navbar-menu {
         display: flex;
     }
 }
 
 @media screen and (max-width: 700px) {
-    .gpt3__navbar {
+    .portfolio__navbar {
         padding: 2rem 4rem;
     }
 }
 
 @media screen and (max-width: 550px) {
-    .gpt3__navbar {
+    .portfolio__navbar {
         padding: 2rem;
     }
 
-    .gpt3__navbar-sign {
+    .portfolio__navbar-sign {
         display: none;
     }
 
-    .gpt3__navbar-menu_container {
+    .portfolio__navbar-menu_container {
         top: 20px;
     }
 }
