--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,10 +1,10 @@
-.gpt3__header {
+.portfolio__header {
     display: flex;
     flex-direction: row;
     padding: 0rem 6rem 0rem 6rem;
 }
 
-.gpt3__header-content {
+.portfolio__header-content {
     flex: 1;
     display: flex;
     justify-content: center;
@@ -14,7 +14,7 @@
     margin-right: 5rem;
 }
 
-.gpt3__header-content h1{
+.portfolio__header-content h1{
     font-family: var(--font-family);
     font-weight: 800;
     font-size: 62px;
@@ -22,7 +22,7 @@
     letter-spacing: -0.04em;
 }
 
-.gpt3__header-content p{
+.portfolio__header-content p{
     font-family: var(--font-family);
     font-size: 20px;
     line-height: 27px;
@@ -31,14 +31,14 @@
     margin-top: 1.5rem;
 }
 
-.gpt3__header-content__input {
+.portfolio__header-content__input {
     width: 100%;
     margin: 2rem 0 1rem;
 
     display: flex;
 }
 
-.gpt3__header-content__input button {
+.portfolio__header-content__input button {
     flex: 0.6;
     width: 100%;
     min-height: 50px;
@@ -55,68 +55,68 @@
     border-radius: 5px;
 }
 
-.gpt3__header-content__input button:hover {
+.portfolio__header-content__input button:hover {
     transition: 0.3s ease;
     background-color: #212d45;
     transform: scale(1.1);
     cursor: pointer;
 }
 
-.gpt3__header-content__input button:hover {
+.portfolio__header-content__input button:hover {
     background-position: left bottom;
   }
 
-.gpt3__header-image {
+.portfolio__header-image {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.gpt3__header-image img {
+.portfolio__header-image img {
     width: 100%;
     height: 100%;
 }
 
 @media screen and (max-width: 1050px) {
-    .gpt3__header {
+    .portfolio__header {
         flex-direction: column;
     }
     
-    .gpt3__header-content {
+    .portfolio__header-content {
         margin: 0 0 3rem;
     }
 }
 
 @media screen and (max-width: 650px) {
-    .gpt3__header h1{
+    .portfolio__header h1{
         font-size: 48px;
         line-height: 60px;
     }
     
-    .gpt3__header p{
+    .portfolio__header p{
         font-size: 16px;
         line-height: 24px;
     }
 
-    .gpt3__header-content__input button {
+    .portfolio__header-content__input button {
         font-size: 16px;
         line-height: 24px;
     }
 }
 
 @media screen and (max-width: 490px) {
-    .gpt3__header h1{
+    .portfolio__header h1{
         font-size: 36px;
         line-height: 48px;
     }
     
-    .gpt3__header p{
+    .portfolio__header p{
         font-size: 14px;
         line-height: 24px;
     }
 
-    .gpt3__header-content__input button {
+    .portfolio__header-content__input button {
         font-size: 12px;
         line-height: 16px;
     }
