--- a/src/containers/about/about.css
+++ b/src/containers/about/about.css
@@ -102,6 +102,23 @@
     margin-top: 0.5rem;
 }
 
+@media screen and (max-width: 1024px) {
+    .portfolio__about-container {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 0rem;
+    }
+
+    .portfolio__about-container p {
+        margin-top: 1rem;
+    }
+    .portfolio__about-container__skills {
+        margin-top: 1rem;
+    }
+
+    
+}
+
 @media screen and (max-width: 850px) {
     .portfolio__about-container {
         flex-direction: column;
@@ -112,7 +129,14 @@
     .portfolio__about-container p {
         margin-top: 1rem;
     }
+    .portfolio__about-container__skills {
+        margin: 0rem;
+        flex-direction: column;
+    }
+
+    
 }
+
 
 @media screen and (max-width: 650px) {
     /* Customizing feature component as per needs */
@@ -120,6 +144,14 @@
         flex-direction: column;
     }
 
+    .portfolio__about-container__skills ,
+    .portfolio__about-container__skills-language,
+    .portfolio__about-container__skills-tech,
+    .portfolio__about-container__skills-cicd {
+        flex-direction: column;
+        margin: 0rem;
+    }
+    
     /* Customizing feature component as per needs */
     .portfolio__features-container_feature-text {
         margin-top: 0.5rem;
@@ -136,5 +168,13 @@
     .portfolio__about-features .portfolio__features-container__feature {
         margin: 1rem 0;
         min-width: 100%;
+    }
+
+    .portfolio__about-container__skills ,
+    .portfolio__about-container__skills-language,
+    .portfolio__about-container__skills-tech,
+    .portfolio__about-container__skills-cicd {
+        flex-direction: column;
+        margin: 0rem;
     }
 }
