--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -33,28 +33,15 @@
     text-align: left;
 }
 
-.portfolio__footer-links div {
-    width: 250px;
-    margin: 1rem;
-}
-
-.portfolio__footer-links_logo {
+.portfolio__footer-links {
     display: flex;
-    flex-direction: column;
 }
 
-.portfolio__footer-links_logo img {
+.portfolio__footer-links img {
     width: 118px;
     height: 30px;
 
     margin-bottom: 1rem;
-}
-
-.portfolio__footer-links_logo p {
-    font-family: var(--font-family);
-    font-size: 12px;
-    line-height: 15px;
-    color: #fff;
 }
 
 
@@ -98,5 +85,13 @@
     .portfolio__footer-heading h1 {
         font-size: 27px;
         line-height: 38px;
+    }
+
+    .portfolio__footer-links{
+        align-items: center;
+    }
+    
+    .portfolio__footer-links img {
+        visibility: hidden;
     }
 }
